fix: tweak spacing

--- a/src/views/product-integration/component-view/components/searchable-variable-group-list/style.module.css
+++ b/src/views/product-integration/component-view/components/searchable-variable-group-list/style.module.css
@@ -45,6 +45,6 @@
 	font-size: 12px;
 	text-transform: uppercase;
 	font-weight: 600;
-	margin-top: 8px;
-	margin-bottom: 24px;
+	margin-top: 24px;
+	margin-bottom: 12px;
 }
